# nw_deployment

./: .gitignore  .jaynes.yml  README.md  filter_pcd.py  fit_plane.py  heightmap.md  heightmap.py  mesh.py  optical_flow.py  optical_flow_scratch.py  pyproject.toml  scratch.py  scratch_pcd.py
agility_analysis/: __init__.py
agility_analysis/baselines/: launch.py  launch_delay.py  launch_gabe_go1.py  launch_gabe_go1_higher_speeds.py  launch_gabe_go1_higher_speeds_clip.py  launch_intermediate_ckpts.py  launch_intermediate_ckpts_v2.py  launch_intermediate_ckpts_v3.py  launch_vision_delay.py
agility_analysis/debug/: ge_launch.py  (+1 more)
cxx/: utils.py
decision_transformer/: README.md  act_trainer.py  buffer.py  evaluate_episodes.py  seq_trainer.py  trainer.py
dependencies/: luma02_requirements.txt
go1_gym_deploy/: .jaynes.yml  README.md  __init__.py
lucidsim_old/: __init__.py  dataset.py  job_queue.py  scratch.py  utils.py
main_street/: __init__.py  config.py  task_registry.py  train.py
vit_pytorch/: README.md  ats_vit.py  cait.py  cct.py  cct_3d.py  cross_vit.py  crossformer.py  cvt.py  deepvit.py  dino.py  distill.py  efficient.py  es_vit.py  extractor.py  learnable_memory_vit.py  levit.py  local_vit.py  mae.py  max_vit.py  max_vit_with_registers.py  mobile_vit.py  mp3.py  mpp.py  na_vit.py  nest.py  parallel_vit.py  pit.py  recorder.py  regionvit.py  rvt.py  scalable_vit.py  sep_vit.py  simmim.py  simple_flash_attn_vit.py  simple_vit.py  simple_vit_1d.py  simple_vit_3d.py  simple_vit_with_fft.py  simple_vit_with_patch_dropout.py  simple_vit_with_qk_norm.py  (+11 more)
(+298 files in other folders)
